# bittorrent_client

./: Cargo.toml  LICENSE  doom-eternal.torrent  readme.md
.github/workflows/: ci.yml
application/: Cargo.toml
application/src/: client.rs  main.rs  tools.rs  torrent.rs
application/src/common_types/: data.rs  error.rs  errors.rs  files.rs  metadata.rs  mod.rs
application/src/io/: consts.rs  mod.rs
application/src/io/deserialization/: deserialize.rs  error.rs  mod.rs  parsing.rs  primitives.rs  tests.rs  util.rs
application/src/io/parser/: mod.rs  node.rs
application/src/io/parser/node/: consts.rs  mod.rs
application/src/io/parsing/: error.rs  node.rs  parsing.rs
application/src/io/repo/: mod.rs
application/src/io/serialization/: consts.rs  deserialize.rs  mod.rs  node.rs  parsing.rs  primitives.rs  serialize.rs  tests.rs  util.rs
application/src/network/: mod.rs  tcp.rs
application/src/parser/: error.rs  mod.rs  node.rs  parsing.rs  tests.rs
application/src/repository/: mod.rs  types.rs
application/src/tests/: mod.rs  parsing.rs  serialization.rs
parser/: Cargo.toml
parser/src/: lib.rs
torrent_client/: Cargo.toml
torrent_client/src/: main.rs  torrent.rs
torrent_lib/: Cargo.toml
torrent_lib/src/: lib.rs  parsing.rs  torrent.rs
torrent_lib/src/torrent/: raw_data.rs
