[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Vyacheslav Zalygin vya.zalygin@gmail.com"]
description = "A BitTorrent client"
repository = "https://github.com/vzalygin/bittorrent_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
sha1 = "0.10"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }