[package]
name = "application"
version = "0.1.0"
edition = "2021"
authors = ["Vyacheslav Zalygin vya.zalygin@gmail.com"]
description = "A BitTorrent client"
repository = "https://github.com/vzalygin/bittorrent_client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
sha1 = "0.10"
base64 = "0.21.0"
getrandom = "0.2.8"

nom = "7.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }